Fix Content div overflows xs container #18

--- a/app/assets/stylesheets/bootstrap_and_overrides.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.less
@@ -49,6 +49,7 @@ header.navbar{
   }
   top: -@navbar-height;
   padding: 0;
+  overflow-x: hidden;
 }
 
 #page-heading{
